--- a/blog/src/assets/css/comment.css
+++ b/blog/src/assets/css/comment.css
@@ -1,14 +1,13 @@
 html {
   font-family: 'yuanrun';
-  cursor: url(http://libertys.cn/img/blog/Arrow.cur), default;
+  cursor: url(http://libertys.cn/img/blog/Arrow.cur) pointer;
 }
 
 body {
   background-image: linear-gradient(to right, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
-  
 }
 
-
+/* 每个页面都有的样式：如home页 */
 .page-common {
   margin: 70px 100px 0;
   border: 1px solid black;
@@ -37,7 +36,7 @@ body {
     background-color: #c2d0e1;
 }
 
-/* 盒子阴影 */
+/* 盒子阴影：entry等 */
 .shadow-box {
   box-shadow: 0 0 20px 1px rgb(188, 185, 185);
   border-radius: 5px;
