--- a/blog/src/assets/iconfonts/iconfont.css
+++ b/blog/src/assets/iconfonts/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3655463 */
-  src: url('iconfont.woff2?t=1664539821803') format('woff2'),
-       url('iconfont.woff?t=1664539821803') format('woff'),
-       url('iconfont.ttf?t=1664539821803') format('truetype');
+  src: url('iconfont.woff2?t=1664694370020') format('woff2'),
+       url('iconfont.woff?t=1664694370020') format('woff'),
+       url('iconfont.ttf?t=1664694370020') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,18 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-chahao:before {
+  content: "\e607";
+}
+
+.icon-icon-test:before {
+  content: "\e636";
+}
+
+.icon-caidan:before {
+  content: "\e639";
 }
 
 .icon-biaoqian:before {
