--- a/blog/src/assets/css/comment.css
+++ b/blog/src/assets/css/comment.css
@@ -1,5 +1,5 @@
 html {
-  font-family: 'yuanrun';
+  /* font-family: 'yuanrun'; */
   cursor: url(http://libertys.cn/img/blog/Arrow.cur) pointer;
 }
 
